# denali-trade

./: .gitignore  Cargo.toml  pixi.toml  project_layout.txt
crates/denali-cli/: Cargo.toml
crates/denali-cli/src/: main.rs
crates/denali-core/: Cargo.toml
crates/denali-core/src/: pipeline.rs
crates/denali-plot/: Cargo.toml
crates/denali-plot/src/: lib.rs
crates/denali-storage/: Cargo.toml
crates/denali-storage/src/: candles.rs  l2.rs  trades.rs  user_fills.rs
crates/denali-trade-engine/: Cargo.toml
crates/denali-trade-engine/src/: candles.rs  l2.rs  lib.rs  trades.rs  user_fills.rs
data/candles/: candles_btc_1m_part_0000.parquet  candles_eth_1m_part_0000.parquet  candles_sol_1m_part_0000.parquet
data/l2/: l2book_btc_part_0000.parquet  l2book_btc_part_0001.parquet  l2book_eth_part_0000.parquet  l2book_eth_part_0001.parquet  l2book_sol_part_0000.parquet  l2book_sol_part_0001.parquet
data/trades/: trades_btc_part_0000.parquet  trades_eth_part_0000.parquet  trades_sol_part_0000.parquet
docs/: example_mpsc.rs  hypersdk_ws_endpoints.md  l2_ws_information.md  pipeline.md
examples/: demo.rs  print_candles.rs  print_l2s.rs  print_trades.rs  user_fills.rs  validation.rs
scripts/: project_layout.sh
scripts/tests/: list_parquet_data.rs  list_parquet_files.rs
src/: candles.rs  l2.rs  main.rs  pipeline.rs  trades.rs  user_fills.rs
