[workspace]
members = [
    "crates/denali-core",
    "crates/denali-storage",
    "crates/denali-trade-engine",
    "crates/denali-cli",
    "crates/denali-plot"
]

resolver = "2"

[workspace.dependencies]
tokio = { version = "1.49", features = ["full"] }
futures = "0.3"
anyhow = "1.0"
flume = "0.12"
num-traits = "0.2"
rust_decimal = "1.40"          # â† pick one version
hypersdk = "0.2.0"
arrow = { version = "57.2.0", features = ["prettyprint"] }
parquet = { version = "57.2.0", features = ["async", "arrow"] }
tempfile = "3.24"              # or 3
