[package]
name = "denali-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "denali"
path = "src/main.rs"

[dependencies]
denali-core = { path = "../denali-core" }
denali-storage = { path = "../denali-storage" }
denali-trade-engine = { path = "../denali-trade-engine" }
anyhow = "1.0"
tokio = { version = "1.49", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3.31"
hypersdk = "0.2.0"

[dev-dependencies]
tempfile = "3"
