[package]
name = "denali-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "denali"
path = "src/main.rs"

[dependencies]
denali-core = { path = "../denali-core" }
denali-storage = { path = "../denali-storage" }
denali-trade-engine = { path = "../denali-trade-engine" }
anyhow = { workspace = true }
tokio = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
futures = { workspace = true }
hypersdk = { workspace = true }

[dev-dependencies]
tempfile = "3"
