[package]
name = "denali-storage"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
denali-core = { path = "../denali-core" }
arrow = { version = "57.2.0", features = ["prettyprint"] }
parquet = { version = "57.2.0", features = ["async", "arrow"] }
anyhow = "1.0"
futures = "0.3"
tokio = { version = "1.49", features = ["full"] }
hypersdk = "0.2.0"
num-traits = "0.2.19"
