[package]
name = "denali-storage"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
denali-core = { path = "../denali-core" }
arrow = { version = "57.2.0", features = ["prettyprint"] }
parquet = { version = "57.2.0", features = ["async", "arrow"] }
anyhow = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
hypersdk = { workspace = true }
tempfile = { workspace = true }
num-traits = "0.2.19"
rust_decimal = "1.40.0"
hex = "0.4.3"
