[package]
name = "denali-trade-engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
denali-core = { path = "../denali-core" }
num-traits = "0.2"
rust_decimal = "1.35"
futures = { workspace = true }
tokio = { workspace = true }
hypersdk = { workspace = true }
flume = { workspace = true }
