[package]
name = "denali-trade-engine"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
denali-core = { path = "../denali-core" }
num-traits = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
hypersdk = { workspace = true }
flume = { workspace = true }
